<resources>
    <string name="default_web_client_id" translatable="false">149329179163-d4jjbii9feu4vqf9cqqc98ksgm5d8hja.apps.googleusercontent.com</string>

    <string name="app_name">Pokedex</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="reload">Reload</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="account_created_success">Account created successfully.</string>
    <string name="account_creation_error">Error creating account.</string>
    <string name="email_verification_sent">Email verification sent.</string>
    <string name="email_verification_failed">Email verification failed.</string>
    <string name="required">Required.</string>
    <string name="user_status">User: %1$s</string>
    <string name="firebase_id">Firebase ID: %1$s</string>
    <string name="not_authenticated">Not authenticated</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="email_not_verified">Email has not yet been verified!</string>
    <string name="email_verified">Email has been verified!</string>
    <string name="reload_successful">Reload successful</string>
    <string name="signed_in">Signed In</string>
    <string name="login_with_email_password">Sign in with Email/Password</string>
    <string name="user_email">User Email</string>
    <string name="pokedex">Pokedex</string>
    <string name="load_list">Load Pokemon List</string>
    <string name="pokemon_image_description">Pokemon Sprite</string>
    <string name="favorite_icon">Favorite</string>
    <string name="fetching_pokemon">Fetching all Pokémon…</string>
    <string name="reset_filters">Filters have been reset</string>
    <string name="current_user">email@example.com</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="pokemon_data_loaded">Pokémon data has been loaded</string>
    <string name="google_sign_in_fail">Google sign-in failed</string>
    <string name="app_logo">App Logo</string>

    <string-array name="pokemon_types">
        <item>All</item>
        <item>Normal</item>
        <item>Fire</item>
        <item>Water</item>
        <item>Electric</item>
        <item>Grass</item>
        <item>Ice</item>
        <item>Fighting</item>
        <item>Poison</item>
        <item>Ground</item>
        <item>Flying</item>
        <item>Psychic</item>
        <item>Bug</item>
        <item>Rock</item>
        <item>Ghost</item>
        <item>Dragon</item>
        <item>Dark</item>
        <item>Steel</item>
        <item>Fairy</item>
    </string-array>

    <string-array name="pokemon_generations">
        <item>National</item>
        <item>Gen 1</item>
        <item>Gen 2</item>
        <item>Gen 3</item>
        <item>Gen 4</item>
        <item>Gen 5</item>
        <item>Gen 6</item>
        <item>Gen 7</item>
        <item>Gen 8</item>
        <item>Gen 9</item>
    </string-array>

    <string-array name="favorite_filter_options">
        <item>All</item>
        <item>Favorites</item>
    </string-array>
</resources>